--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -21,12 +22,13 @@
             <!-- row 1 -->
             <div class="row">
                 <div class="yellow1a col-12 col-md-6 my-3">
-                    <p><span class="1in3">1 IN 3</span><br> children and <br> adolescents (ages 2-19) <br> <span class="obese"> ARE OVERWEIGHT <br> OR OBESE </span> <br> and almost <span> NONE </span> meet <br> recommended healthy diet and <br> physical activity amount
+                    <p><i class="fa-solid fa-child"></i><i class="fa-solid fa-child"></i><i class="fa-solid fa-child"></i>
+                        <span class="1in3">1 IN 3</span><br> children and <br> adolescents (ages 2-19) <br> <span class="obese"> ARE OVERWEIGHT <br> OR OBESE </span> <br> and almost <span> NONE </span> meet <br> recommended healthy diet and <br> physical activity amount
                     </p> 
                 </div>
                 <div class="blue1b col-12 col-md-6 my-3">
                     <p>
-                        An estimated <br><span> 12.5 <br>million </span> <br>children (ages 5 years or <br>younger), spend <br> <span> 33 Hours / week </span> <br>in <strong> <u> child care settings </u> </strong> and <br> consume nearly all of their<br> daily calories.
+                        An estimated <br><i class="fa-solid fa-bowling-ball"></i><i class="fa-solid fa-bottle-droplet"></i><span> 12.5 <br>million </span> <br>children (ages 5 years or <br>younger), spend <br> <span> 33 Hours / week </span> <br>in <strong> <u> child care settings </u> </strong> and <br> consume nearly all of their<br> daily calories.
                     </p>
                 </div>
             </div>
@@ -37,9 +39,9 @@
                     obesity is linked <br>to more chronic <br>condition than:
                 </p>
                 <ul>
-                    <li>Smoking</li>
-                    <li>Poverty</li>
-                    <li>Drinking</li>
+                    <li><i class="fa-solid fa-smoking"></i>Smoking</li>
+                    <li><i class="fa-solid fa-hand-holding-dollar"></i>Poverty</li>
+                    <li><i class="fa-solid fa-martini-glass-citrus"></i>Drinking</li>
                 </ul>
                 <p>
                     increasing the risk of more than <strong><u>20 preventable diseases,</u></strong> including sleep <br> apnea, asthma, heart disease, Type 2 diabetes, osteoaethritis, high blood <br>pressure and high-cholesterol stroke.
@@ -50,7 +52,7 @@
         <div class="row" >
             <div class="blue3 col-12 my-3">
                 <div>
-                    <h3>Risk Factors <i></i></h3>
+                    <h3>Risk Factors <i class="fa-solid fa-shield-virus"></i></h3>
                     
                     <p> Childern in theie early teens who are<br> obese and who have <strong><u>high triglyceride <br>levels </u></strong> have arteries similar to those <br>of 45-years olds.</p>
                     <br>
@@ -66,31 +68,32 @@
         <div class="row" >
             <div class="red4a col-12 col-md-6 my-3">
                 <p><span>french fries</span></p><br> are the common vegtable <br>that children eat, comprising<br> <span>25%</span> <br>of their vegtable intake.<br>
-                <i></i>
+                <i class="fa-solid fa-burger">
+            </i>
             </div>
         
             <div class="yellow4b col-12 col-md-6 my-3 ">
-                <p><i></i><br><span>juice</span> <br>(which may take important fibre <br>found in whole fruit) make up <br><span>40%</span> <br>of children's daily fruit intake.</p>
+                <p><i class="bi bi-cup-straw"><br><span>juice</span> <br>(which may take important fibre <br>found in whole fruit) make up <br><span>40%</span> <br>of children's daily fruit intake.</p>
             </div>
         </div>
         <!-- row-5 -->
         <div class="row" >
             <div class="blue5 col-12 my-3">
-                <p><span>40% - 50% of toddlers </span> <br>watch <strong><u>more</u></strong> television than is recommended. </p>
-                <i>    </i>
+                <p><span>40% - 50% of toddlers </span> <br>watch <strong><u>more</u></strong> television than is recommended. <i class="fa-solid fa-satellite-dish"></i></p>
+                <i class="fa-solid fa-tv"></i>
             </div>
         </div>
         <!-- row-6 -->
         <div class="row" >
             <div class="yellow6 col-12 my-3">
                 <p><span>nearly 1/2 of <br>preschoolers</span><br> don't get through <strong><u>physical activity</u></strong></p>
-                <i></i>
+                <i class="fa-solid fa-person-biking"></i>
             </div>
         </div>
         <!-- row-7  -->
         <div class="row" >
             <div class="blue7a col-12 col-md-6 my-3">
-                <p><i></i> <br>The <strong><u>cost</u></strong> of obesity in the <br>United States is staggering<br> totaling about<br> <span>$147</span><br><span>Billion</span></p>
+                <p><i class="fa-solid fa-sack-dollar"></i> <br>The <strong><u>cost</u></strong> of obesity in the <br>United States is staggering<br> totaling about<br> <span>$147</span><br><span>Billion</span></p>
             </div>
             <div class="red7b col-12 col-md-6 my-3">
                 <p>CHILDREN WHO<br> EAT HEALTHY <br>FOODS AND GET <br>DAILY PHYSICAL <br>ACTIVITY HAVE:</p>
