--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container my-5">
         <div class="subcontainer">
+            
             <div class="heading">
                 <i class="fa-solid fa-children"></i>
                 <h1>OBESITY</h1>
@@ -31,10 +32,10 @@
                     </p> 
                 </div>
                 <div class="blue1b col-12 col-md-6 ">
-                    <p class="mt-3">
+                    <p class="mt-3" style="text-align: center;">
                         An estimated <br>
                         <i class="fa-solid fa-bowling-ball"></i>
-                        <i class="fa-solid fa-bottle-droplet" style="font-size: 30px;"></i>
+                        <i class="fa-solid fa-bottle-droplet" style="font-size: 35px;"></i>
                         <span class="text-uppercase" style="font-size: 40px;">
                          12.5 <br>million </span> <br>
                         children (ages 5 years or <br>younger), spend <br> <span class="text-uppercase" style="font-size: 25px;"> 33 Hours / week </span> <br>in <strong> <u> child care settings </u> </strong> and <br> consume nearly all of their<br> daily calories.
@@ -80,7 +81,7 @@
             <!-- row 3 -->
             <div class="row my-5"  >
                 <div class="blue3 col-6">
-                    <h3 class="py-2">Risk Factors <i class="fa-solid fa-shield-virus"></i></h3>
+                    <h3 class="py-2 mt-1">Risk Factors <i class="fa-solid fa-shield-virus"></i></h3>
                     <div>
                         <p> Childern in theie early teens who are<br> obese and who have <strong><u>high triglyceride <br>levels </u></strong> have arteries similar to those <br>of 45-years olds.</p>
                         <br>
@@ -88,7 +89,7 @@
                     </div>
                 </div>
                 <div class="blue3 col-6">
-                    <h3 class="py-2">&nbsp;</h3>
+                    <h3 class="py-2 mt-1">&nbsp;</h3>
                     <div>
                         <p>Children who are overweight from <br>the ages of 7 to 13 days develop <br><strong><u>heart diseases</u></strong> as early as age 25</p><br><br>
                         <p>Obese children are likely <br>to die before age 55 their <br>slimmers peers</p>
