css code reduce

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- row 1 -->
             <div class="row my-5">
                 <div class="yellow1a col-12 col-md-6 ">
-                    <p class="mt-3"> 
+                    <p class="mt-3" style="text-align: center;"> 
                         <i class="fa-solid fa-child" style="color: black;"></i>
                         <i class="fa-solid fa-child" style="color: black;"></i>
                         <i class="fa-solid fa-child" style="color: rgb(212, 28, 28);"></i> <br>
