--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
     <div class="container my-5">
         <div class="subcontainer">      
             <div class="heading">
-                <i class="fa-solid fa-children"></i>
-                <h1>OBESITY</h1>
-                <h5>CHILDWOOD STATISTICS</h5>
+                <div>
+                    <i class="fa-solid fa-children"></i>
+                </div>
+                <div>
+                    <h1>OBESITY</h1>
+                    <h5>CHILDWOOD STATISTICS</h5>
+                </div>
             </div> 
 
-            <!-- row 1 -->
+            <!-- row 1  1 in 3 and 12.5-->
             <div class="row my-5">
-                <div class="yellow1a col-12 col-md-6 ">
-                    <p class="mt-3" style="text-align: center;"> 
+                <div class="yellow1a col-12 col-md-6">
+                    <p class="mt-3" style="text-align: center; "> 
                         <i class="fa-solid fa-child" style="color: black;"></i>
                         <i class="fa-solid fa-child" style="color: black;"></i>
                         <i class="fa-solid fa-child" style="color: rgb(212, 28, 28);"></i> <br>
@@ -42,27 +46,27 @@
                 </div>
             </div>
 
-            <!-- row 2 -->
+            <!-- row 2 obesity li-->
             <div class="row mb-5" >
                 <div class="red2">
-                    <div class="col-12 ">
+                    <div class="col-12">
                         <div class="row">
                             
-                            <div class="col-6 mt-3" >
+                            <div class="col-12 mt-3 col-md-6" >
                                 <p class="text-uppercase" style="justify-content:center; font-size: 30px; padding-left: 10px;">
                                     obesity is linked <br>to more chronic <br>condition than:
                                 </p>
                             </div>
 
-                            <div class="col-6" >    
+                            <div class="col-12 col-md-6" >    
                                 <div class="row " style="text-align: center; font-size: 18px;">
-                                    <div class="col-4 mt-5" >
+                                    <div class="col-12 col-sm-4 mt-5" >
                                         <figure><i class="fa-solid fa-smoking"></i><figcaption>Smoking</figcaption></figure>
                                     </div>
-                                    <div class="col-4 mt-5" >
+                                    <div class="col-12 col-sm-4 mt-5" >
                                         <figure><i class="fa-solid fa-hand-holding-dollar"></i><figcaption></figcaption>Poverty</figure>
                                     </div>
-                                    <div class="col-4 mt-5" >
+                                    <div class="col-12 col-sm-4 mt-5" >
                                         <figure><i class="fa-solid fa-martini-glass-citrus"></i><figcaption>Drinking</figcaption> </figure>
                                     </div>
                                 </div>
@@ -77,9 +81,9 @@
                 </div>
             </div>
 
-            <!-- row 3 -->
+            <!-- row 3 risk -->
             <div class="row my-5"  >
-                <div class="blue3 col-6">
+                <div class="blue3 col-12 col-md-6">
                     <h3 class="py-2 mt-1">Risk Factors <i class="fa-solid fa-shield-virus"></i></h3>
                     <div>
                         <p> Childern in theie early teens who are<br> obese and who have <strong><u>high triglyceride <br>levels </u></strong> have arteries similar to those <br>of 45-years olds.</p>
@@ -87,7 +91,7 @@
                         <p>Obese children as age 3 <br>show indicates for <strong><u> developing heart <br>disease</u></strong> later in life </p>
                     </div>
                 </div>
-                <div class="blue3 col-6">
+                <div class="blue3 col-12 col-md-6">
                     <h3 class="py-2 mt-1">&nbsp;</h3>
                     <div>
                         <p>Children who are overweight from <br>the ages of 7 to 13 days develop <br><strong><u>heart diseases</u></strong> as early as age 25</p><br><br>
@@ -96,7 +100,7 @@
                 </div> 
             </div>     
 
-            <!-- row-4 -->
+            <!-- row-4 french juice -->
             <div class="row mb-5" >
                 <div class="red4a col-12 col-md-6" style="text-align: center;">
                     <p><span class="text-uppercase" style="font-size: 30px;">french fries</span><br> are the common vegtable <br>that children eat, comprising<br> <span style="font-size: 40px;">25%</span> <br>of their vegtable intake.<br><br>
@@ -108,33 +112,34 @@
                 </div>
             </div>
 
-            <!-- row-5 -->
+            <!-- row-5 40-50% -->
             <div class="row mb-5" >
-                <div class="blue5 col-9 ">
+
+                <div class="blue5 col-12 col-md-9 ">
                     <p><span class="text-uppercase" style="font-size: 40px;">40% - 50% of toddlers </span> <br>watch <strong><u>more</u></strong> television than is recommended.</p>
                 </div>
 
-                <div class="blue5 col-1 " style="font-size: 25px; text-align: right; ">
+                <div class="blue5 col-3 col-md-1 " style="font-size: 25px; text-align: right; ">
                     <i class="fa-solid fa-satellite-dish" style="margin-top: 100px;" ></i>
                 </div>
 
-                <div class="blue5 col-2 p-1 " style="font-size: 60px;">
+                <div class="blue5 col-9 col-md-2 p-1 " style="font-size: 60px;">
                     <i class="fa-solid fa-tv" style="margin-top:50%;"></i>
                 </div>
                 
             </div>
 
-            <!-- row-6 -->
+            <!-- row-6 nearly 1/2 cycle-->
             <div class="row mb-5" >
-                <div class=" yellow6 col-9">
+                <div class=" yellow6 col-12 col-md-9">
                     <p><span class="text-uppercase" style="font-size: 40px;">nearly 1/2 of <br>preschoolers</span><br> don't get through <strong><u>physical activity</u></strong></p>
                 </div>
-                <div class="yellow6 col-3 " style="text-align: center;" >
+                <div class="yellow6 col-12 col-md-3 " style="text-align: center;" >
                     <i class="fa-solid fa-person-biking mt-4" style="font-size: 70px; padding: 10px;"></i>
                 </div>
             </div>
 
-            <!-- row-7  -->
+            <!-- row-7 147mil children -->
             <div class="row mb-5" >
                 <div class="blue7a col-12 col-md-6 " >
                     <p class="mt-4" style="text-align: center;" ><i class="fa-solid fa-sack-dollar" style="font-size: 60px; "></i> <br>The <strong><u>cost</u></strong> of obesity in the <br>United States is staggering<br> totaling about<br> <span style="font-size: 40px;">$147<br>Billion</span></p>
