--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
     <div class="container my-5">
         <div class="subcontainer">      
-            <div class="heading">
-                <div>
+            <div class="heading row my-5">
+                <div class="col-12 col-md-4" style="text-align: right;">
                     <i class="fa-solid fa-children"></i>
                 </div>
-                <div>
+                <div class="col-12 col-md-8" style="text-align: left;">
                     <h1>OBESITY</h1>
                     <h5>CHILDWOOD STATISTICS</h5>
                 </div>
@@ -26,7 +26,7 @@
 
             <!-- row 1  1 in 3 and 12.5-->
             <div class="row my-5">
-                <div class="yellow1a col-12 col-md-6">
+                <div class="yellow1a col-12 col-md-6 col-sm-12">
                     <p class="mt-3" style="text-align: center; "> 
                         <i class="fa-solid fa-child" style="color: black;"></i>
                         <i class="fa-solid fa-child" style="color: black;"></i>
@@ -34,7 +34,7 @@
                         <span style="font-size: 45px;">1 IN 3</span><br> children and <br> adolescents (ages 2-19) <br> <span style="font-size:30px;"> ARE OVERWEIGHT <br> OR OBESE </span> <br> and almost <span><u>NONE</u></span> meet <br> recommended healthy diet and <br> physical activity amount.
                     </p> 
                 </div>
-                <div class="blue1b col-12 col-md-6 ">
+                <div class="blue1b col-12 col-md-6 col-sm-12">
                     <p class="mt-3" style="text-align: center;">
                         An estimated <br>
                         <i class="fa-solid fa-bowling-ball"></i>
@@ -132,7 +132,7 @@
             <!-- row-6 nearly 1/2 cycle-->
             <div class="row mb-5" >
                 <div class=" yellow6 col-12 col-md-9">
-                    <p><span class="text-uppercase" style="font-size: 40px;">nearly 1/2 of <br>preschoolers</span><br> don't get through <strong><u>physical activity</u></strong></p>
+                    <p><span class="text-uppercase" style="font-size: 40px; width: inherit;">nearly 1/2 of <br>preschoolers</span><br> don't get through <strong><u>physical activity</u></strong></p>
                 </div>
                 <div class="yellow6 col-12 col-md-3 " style="text-align: center;" >
                     <i class="fa-solid fa-person-biking mt-4" style="font-size: 70px; padding: 10px;"></i>
