--- a/index.html
+++ b/index.html
@@ -15,13 +15,38 @@
     <div class="container my-5">
         <div class="subcontainer">      
             <div class="heading row my-5">
-                <div class="col-12 col-md-4" style="text-align: right;">
+
+                <div class="col-12 col-md-6 bg-success">
                     <i class="fa-solid fa-children"></i>
                 </div>
-                <div class="col-12 col-md-8" style="text-align: left;">
+                
+                <div class="col-12 col-md-6 bg-warning">
+                    <ul>
+                        <li>
+                            <h1 class="text-danger">OBESITY</h1>
+                        </li>
+                        <li>
+                            <h5 class="text-white">CHILDWOOD STATISTICS</h5>
+                        </li>
+                    </ul>
+                </div>
+
+
+
+
+
+
+
+
+
+
+                <!-- <div class="col-12 col-md-3 bg-success" style="text-align: right;">
+                    <i class="fa-solid fa-children"></i>
+                </div>
+                <div class="col-12 col-md-9 bg-warning" style="text-align: left;">
                     <h1>OBESITY</h1>
                     <h5>CHILDWOOD STATISTICS</h5>
-                </div>
+                </div> -->
             </div> 
 
             <!-- row 1  1 in 3 and 12.5-->
