--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <div class="col-12 col-md-6 bg-warning">
                     <ul>
                         <li>
-                            <h1 class="text-danger">OBESITY</h1>
+                            <h1 class="text-danger" style="font-size: 70px; text-align: left; width: auto; font-weight: 400;
+                            font-size: 70px;">OBESITY</h1>
                         </li>
                         <li>
                             <h5 class="text-white">CHILDWOOD STATISTICS</h5>
@@ -31,22 +32,6 @@
                     </ul>
                 </div>
 
-
-
-
-
-
-
-
-
-
-                <!-- <div class="col-12 col-md-3 bg-success" style="text-align: right;">
-                    <i class="fa-solid fa-children"></i>
-                </div>
-                <div class="col-12 col-md-9 bg-warning" style="text-align: left;">
-                    <h1>OBESITY</h1>
-                    <h5>CHILDWOOD STATISTICS</h5>
-                </div> -->
             </div> 
 
             <!-- row 1  1 in 3 and 12.5-->
